@@ -957,7 +957,7 @@ void AGE_Frame::CreateCivControls()
 
 void AGE_Frame::OnKillFocus_Civs(wxFocusEvent &event)
 {
-	event.Skip();
+	//event.Skip();
 	if(((AGETextCtrl*)event.GetEventObject())->SaveEdits() != 0) return;
 	if(event.GetId() == Civs_Name[0]->GetId()
 	|| event.GetId() == Civs_Name[1]->GetId())
